# karma-kredit

./: .env  .gitignore  UI_Prompt.md  app.py  pyproject.toml  run_fico_pipeline.py
backend/: deployedContracts.json  hardhat.config.js  package-lock.json  package.json
backend/contracts/: LoanMarketplace.sol  Mint.sol  MultitokenLoan.sol
backend/scripts/: deploy.js  deploy_2.js
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  AppRouter.jsx  index.css
frontend/src/components/: CreditScoreDisplay.jsx  Header.jsx  Loader.jsx  LoanCard.jsx  Modal.jsx  Navbar.jsx  RoleModal.jsx  RoleSelectionModal.jsx
frontend/src/constants/: chains.js
frontend/src/context/: Web3Context.jsx
frontend/src/contexts/: WalletContext.jsx
frontend/src/pages/: BorrowerDashboard.jsx  BusinessDashboard.jsx  Directory.jsx  InvestorDashboard.jsx  LandingPage.jsx  LoanMarketplace.jsx  StakePool.jsx  WalletKarma.jsx
frontend/src/styles/: BusinessDashboard.css  CreditScoreDisplay.css  Directory.css  InvestorDashboard.css  LandingPage.css  Loader.css  LoanCard.css  Modal.css  Navbar.css  RoleModal.css  global.css
frontend/src/utils/: pinata.js
model/: .env  X_tx_matrix.npy  convert_sim_data.py  eda.ipynb  model.py  predict.py  real_wallet_features.csv  real_wallet_transactions.csv  requirements.txt  walletEtl.py  walletEtl_backup.py  y_fico_scores.npy
model/model_pkls/: fico_xgb_model.pkl  fico_xgb_scaler.pkl
model/sim_data/: X_wallet_features.npy  sim_wallet_features.csv  y_fico_scores.npy
(+4 files in other folders)
